# flora_iot

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.h.in
fs/: index.shtml
source/: cgi.c  cgi.h  gpio_conf.h  lwipopts.h  main.c  ssi.c  ssi.h  waterctl.c  waterctl.h
